Задачи Spring MVC

--- a/src/main/resources/db/changelog/changeset/jsonView/1764935023-create-user-table.yaml
+++ b/src/main/resources/db/changelog/changeset/jsonView/1764935023-create-user-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: Alexandr Kolosov
       changes:
         - createTable:
-            tableName: user
+            tableName: json_view_user
             columns:
               - column:
                   name: id
