--- a/src/main/resources/db/changelog/changeset/jsonView/1764935738-create-order-product-table.yaml
+++ b/src/main/resources/db/changelog/changeset/jsonView/1764935738-create-order-product-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: Alexandr Kolosov
       changes:
         - createTable:
-            tableName: order_product
+            tableName: json_view_order_product
             columns:
               - column:
                   name: id
@@ -27,9 +27,9 @@ databaseChangeLog:
                   type: INT
         - addForeignKeyConstraint:
             constraintName: FK-order_product-order
-            baseTableName: order_product
+            baseTableName: json_view_order_product
             baseColumnNames: order_id
-            referencedTableName: order
+            referencedTableName: json_view_order
             referencedColumnNames: id
             onDelete: CASCADE
             onUpdate: CASCADE
