--- a/src/main/resources/db/changelog/changeset/jsonView/1764936742-insert-into-user-table.yaml
+++ b/src/main/resources/db/changelog/changeset/jsonView/1764936742-insert-into-user-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: Alexandr Kolosov
       changes:
         - insert:
-            tableName: user
+            tableName: json_view_user
             columns:
               - column:
                   name: id
@@ -18,4 +18,4 @@ databaseChangeLog:
         - sql: #Изменение текущего значения автоинкремента первичного ключа
             dbms: 'postgresql'
             stripComments: true
-            sql: select setval('user_id_seq', (select max(id)+1 from public.user), false)
+            sql: select setval('json_view_user_id_seq', (select max(id)+1 from public.json_view_user), false)
