--- a/src/main/resources/db/changelog/changeset/jsonView/1764936743-insert-into-order-table.yaml
+++ b/src/main/resources/db/changelog/changeset/jsonView/1764936743-insert-into-order-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: Alexandr Kolosov
       changes:
         - insert:
-            tableName: order
+            tableName: json_view_order
             columns:
               - column:
                   name: id
@@ -21,4 +21,4 @@ databaseChangeLog:
         - sql: #Изменение текущего значения автоинкремента первичного ключа
             dbms: 'postgresql'
             stripComments: true
-            sql: select setval('order_id_seq', (select max(id)+1 from public.order), false)
+            sql: select setval('json_view_order_id_seq', (select max(id)+1 from public.json_view_order), false)
