--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5439/TestBlank
+    url: jdbc:postgresql://localhost:5439/SpringDataProjections
     username: postgres
     password: root
 
