--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,11 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: SpringData
+      POSTGRES_DB: SpringDataJdbc
     ports:
       - "5439:5432"
     expose:
       - "5439"
-    volumes:
-      - db-data:/var/lib/postgresql/data
     restart: unless-stopped
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
