--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,7 @@ databaseChangeLog:
       file: db/changelog/changeset/1765895050-create-user-table.yaml
   - include:
       file: db/changelog/changeset/1765895051-insert-into-user-table.yaml
+  - include:
+      file: db/changelog/changeset/1765895052-create-failed-login-attempts-table.yaml
+  - include:
+      file: db/changelog/changeset/1765895053-insert-into-failed-login-attempts-table.yaml
