Spring Security - JWT

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
 
   liquibase:
     enabled: true
-    drop-first: true
+#    drop-first: true
 
   jpa:
     hibernate:
@@ -25,8 +25,18 @@ springdoc:
   swagger-ui:
     path: /doc
 
-#logging:
-#  level:
+logging:
+  file:
+    name: logs/app.log
+  level:
+#    root: info
+    web: info
 #    sql: debug
-#    web: debug
-#    root: debug
+
+server:
+  ssl:
+    key-store: classpath:mykeystore.jks
+    key-store-password: qwerty
+    key-password: qwerty
+    key-alias: mykey
+  port:
