Spring Security - JWT

--- a/src/main/resources/db/changelog/changeset/1765895051-insert-into-user-table.yaml
+++ b/src/main/resources/db/changelog/changeset/1765895051-insert-into-user-table.yaml
@@ -33,6 +33,21 @@ databaseChangeLog:
               - column:
                   name: role
                   value: SUPER_ADMIN
+        - insert:
+            tableName: user
+            columns:
+              - column:
+                  name: id
+                  value: 3
+              - column:
+                  name: email
+                  value: moderator@example.ru
+              - column:
+                  name: password
+                  value: moderator
+              - column:
+                  name: role
+                  value: MODERATOR
         - sql: #Изменение текущего значения автоинкремента первичного ключа
             dbms: 'postgresql'
             stripComments: true
