--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ spring:
 
   liquibase:
     enabled: true
-#    drop-first: true
+    drop-first: true
 
   jpa:
     hibernate:
@@ -39,4 +39,4 @@ server:
     key-store-password: qwerty
     key-password: qwerty
     key-alias: mykey
-  port:
+  port: 8443
