--- a/src/main/resources/db/changelog/changeset/1765895053-insert-into-failed-login-attempts-table.yaml
+++ b/src/main/resources/db/changelog/changeset/1765895053-insert-into-failed-login-attempts-table.yaml
@@ -21,3 +21,12 @@ databaseChangeLog:
               - column:
                   name: attempts
                   value: 0
+        - insert:
+            tableName: failed_login_attempts
+            columns:
+              - column:
+                  name: user_id
+                  value: 3
+              - column:
+                  name: attempts
+                  value: 0
