--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: SpringSecurityJwt
+      POSTGRES_DB: SpringSecurityOauth
     ports:
       - "5439:5432"
     expose:
