--- a/src/main/resources/db/changelog/changeset/1765895050-create-user-table.yaml
+++ b/src/main/resources/db/changelog/changeset/1765895050-create-user-table.yaml
@@ -19,16 +19,13 @@ databaseChangeLog:
                   constraints:
                     unique: true
               - column:
+                  name: name
+                  type: VARCHAR(256)
+              - column:
                   name: password
                   type: VARCHAR(512)
               - column:
                   name: role
                   type: VARCHAR(64)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: is_account_non_locked
-                  type: BOOLEAN
-                  defaultValueBoolean: true
                   constraints:
                     nullable: false
